--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-router": "^7.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "fluid-tailwind": "^1.0.4",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
